feat: revert main slider

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
     <link rel="stylesheet" href="index.css" />
     <script src="slider.ts" type="module"></script>
+    <script src="masonry.ts" type="module"></script>
     <script src="animation.ts" type="module"></script>
     <script src="reveal.ts" type="module"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
@@ -304,7 +305,7 @@
     </section>
 
     <section class="flex w-full items-center justify-center bg-[#F5F0EC] p-4 lg:px-40 lg:py-16">
-      <div class="flex w-full flex-wrap items-center justify-between bg-[#1B5B31] p-8 text-white lg:px-16 lg:py-32">
+      <div class="flex w-full flex-wrap gap-1 items-center justify-between bg-[#1B5B31] p-8 text-white lg:px-16 lg:py-32">
         <h4 class="mb-8 text-2xl lg:mb-0 lg:text-3xl" id="reveal">
           Zostańmy w kontakcie! <br />Znajdziesz nas na
           <span class="font-medium italic">Instagramie.</span>
