--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
           współczesnego trybu życia.
         </p>
         <a href="#"
-          class="inline-flex self-start items-center gap-2 rounded-full border border-white px-6 py-3 text-white hover:ring-2 hover:ring-white/50 hover:transition-all hover:ease-in-out focus:ring-4 focus:ring-white/50 focus:transition-all focus:ease-in-out"
+          class="inline-flex items-center gap-2 self-start rounded-full border border-white px-6 py-3 text-white hover:ring-2 hover:ring-white/50 hover:transition-all hover:ease-in-out focus:ring-4 focus:ring-white/50 focus:transition-all focus:ease-in-out"
           id="reveal">
           Poznaj nas bliżej
           <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
@@ -237,8 +237,7 @@
     </section>
 
     <section class="relative isolate flex w-full flex-col justify-center gap-12 bg-[#DCC1AB] px-4 py-16" id="masonry">
-      <div
-      id="overlay"
+      <div id="overlay"
         class="absolute bottom-0 left-0 z-[1] flex h-[32rem] w-full items-end justify-center bg-gradient-to-b from-transparent to-[#DCC1AB]">
         <button id="show-more"
           class="absolute bottom-24 inline-flex items-center gap-2 rounded-full border border-black px-6 py-3 text-black hover:ring-2 hover:ring-black/50 hover:transition-all hover:ease-in-out focus:ring-4 focus:ring-black/50 focus:transition-all focus:ease-in-out">
@@ -287,7 +286,7 @@
             class="h-full w-full object-cover transition-transform duration-1000 group-hover:scale-105 group-hover:transition-transform group-hover:duration-1000" />
         </div>
         <div id="photo-10-clickable"
-          class="group relative hidden row-span-2 cursor-zoom-in items-center justify-center overflow-hidden transition-colors ease-in-out after:absolute after:left-0 after:top-0 after:h-full after:w-full after:bg-transparent after:transition-colors after:duration-1000 hover:after:bg-black/50 hover:after:transition-colors hover:after:duration-1000">
+          class="group relative row-span-2 hidden cursor-zoom-in items-center justify-center overflow-hidden transition-colors ease-in-out after:absolute after:left-0 after:top-0 after:h-full after:w-full after:bg-transparent after:transition-colors after:duration-1000 hover:after:bg-black/50 hover:after:transition-colors hover:after:duration-1000">
           <img src="https://picsum.photos/600/600?random=6"
             class="h-full w-full object-cover transition-transform duration-1000 group-hover:scale-105 group-hover:transition-transform group-hover:duration-1000" />
         </div>
@@ -297,7 +296,7 @@
             class="h-full w-full object-cover transition-transform duration-1000 group-hover:scale-105 group-hover:transition-transform group-hover:duration-1000" />
         </div>
         <div id="photo-12-clickable"
-          class="group relative hidden row-span-2 cursor-zoom-in items-center justify-center overflow-hidden transition-colors ease-in-out after:absolute after:left-0 after:top-0 after:h-full after:w-full after:bg-transparent after:transition-colors after:duration-1000 hover:after:bg-black/50 hover:after:transition-colors hover:after:duration-1000">
+          class="group relative row-span-2 hidden cursor-zoom-in items-center justify-center overflow-hidden transition-colors ease-in-out after:absolute after:left-0 after:top-0 after:h-full after:w-full after:bg-transparent after:transition-colors after:duration-1000 hover:after:bg-black/50 hover:after:transition-colors hover:after:duration-1000">
           <img src="https://picsum.photos/600/600?random=8"
             class="h-full w-full object-cover transition-transform duration-1000 group-hover:scale-105 group-hover:transition-transform group-hover:duration-1000" />
         </div>
@@ -305,7 +304,8 @@
     </section>
 
     <section class="flex w-full items-center justify-center bg-[#F5F0EC] p-4 lg:px-40 lg:py-16">
-      <div class="flex w-full flex-wrap gap-1 items-center justify-between bg-[#1B5B31] p-8 text-white lg:px-16 lg:py-32">
+      <div
+        class="flex w-full flex-wrap items-center justify-between gap-1 bg-[#1B5B31] p-8 text-white lg:px-16 lg:py-32">
         <h4 class="mb-8 text-2xl lg:mb-0 lg:text-3xl" id="reveal">
           Zostańmy w kontakcie! <br />Znajdziesz nas na
           <span class="font-medium italic">Instagramie.</span>
@@ -409,7 +409,7 @@
       </ul>
     </footer>
 
-    <dialog id="photos-dialog" class="h-2/5 w-[calc(100vw-4rem)] backdrop:bg-white/50 lg:h-4/5 lg:w-2/5">
+    <dialog id="photos-dialog" class="h-2/5 w-[calc(100vw-4rem)] backdrop:bg-white/90 lg:h-4/5 lg:w-2/5">
       <div class="relative h-full overflow-hidden">
         <img src="https://picsum.photos/600/600?random=0"
           class="absolute h-full w-full transition-transform duration-1000" id="photo-4" />
@@ -443,6 +443,13 @@
               stroke="currentColor"
               class="h-6 w-6 transition-transform ease-in-out group-hover:scale-125 group-hover:transition-transform group-hover:ease-in-out">
               <path stroke-linecap="round" stroke-linejoin="round" d="M8.25 4.5l7.5 7.5-7.5 7.5" />
+            </svg>
+          </button>
+          <button class="group absolute right-0 top-0 bg-[#F5F0EC] p-4" id="photos-close">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+              stroke="currentColor"
+              class="h-6 w-6 transition-transform ease-in-out group-hover:scale-125 group-hover:transition-transform group-hover:ease-in-out">
+              <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
             </svg>
           </button>
         </div>
