--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="masonry.ts" type="module"></script>
     <script src="animation.ts" type="module"></script>
     <script src="reveal.ts" type="module"></script>
+    <script src="scroll.ts" type="module"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
   </head>
 
@@ -31,31 +32,28 @@
             <ul
               class="animate__animated animate__fadeIn absolute top-16 hidden w-auto whitespace-nowrap rounded-md border border-gray-200 bg-white py-2 text-left shadow-sm group-focus:z-[10] group-focus:grid">
               <li class="w-full px-4 py-2 hover:bg-gray-100">
-                <a href="#">Strony internetowe</a>
+                <a href="#offer">Projekty</a>
               </li>
               <li class="w-full px-4 py-2 hover:bg-gray-100">
-                <a href="#">Aplikacje</a>
+                <a href="#offer">Wizualizacje</a>
               </li>
               <li class="w-full px-4 py-2 hover:bg-gray-100">
-                <a href="#">Sklepy internetowe</a>
-              </li>
-              <li class="w-full px-4 py-2 hover:bg-gray-100">
-                <a href="#">Blogi</a>
+                <a href="#offer">Realizacje</a>
               </li>
             </ul>
           </button>
         </li>
         <li
           class="relative after:absolute after:-bottom-6 after:left-0 after:h-[0.125rem] after:w-0 after:bg-gray-900 after:transition-all after:duration-1000 hover:after:w-full">
-          <a href="#" class="text-gray-900">O firmie</a>
+          <a href="#about" class="text-gray-900">O firmie</a>
         </li>
         <li
           class="relative after:absolute after:-bottom-6 after:left-0 after:h-[0.125rem] after:w-0 after:bg-gray-900 after:transition-all after:duration-1000 hover:after:w-full">
-          <a href="#" class="text-gray-900">Realizacje</a>
+          <a href="#projects" class="text-gray-900">Realizacje</a>
         </li>
         <li
           class="relative after:absolute after:-bottom-6 after:left-0 after:h-[0.125rem] after:w-0 after:bg-gray-900 after:transition-all after:duration-1000 hover:after:w-full">
-          <a href="#" class="text-gray-900">Kontakt</a>
+          <a href="#contact" class="text-gray-900">Kontakt</a>
         </li>
       </ul>
       <div class="relative mx-auto w-max">
@@ -78,34 +76,31 @@
         <ul
           class="animate__animated animate__fadeIn absolute right-4 top-16 hidden w-auto whitespace-nowrap rounded-md border border-gray-200 bg-white py-2 text-left shadow-sm group-focus:z-[10] group-focus:grid">
           <li class="w-full px-4 py-2 hover:bg-gray-100">
-            <a href="#">Oferta</a>
+            <a href="#offer">Oferta</a>
           </li>
           <li class="w-full px-6 py-2 hover:bg-gray-100">
-            <a href="#">Strony internetowe</a>
+            <a href="#offer">Projekty</a>
           </li>
           <li class="w-full px-6 py-2 hover:bg-gray-100">
-            <a href="#">Aplikacje</a>
+            <a href="#offer">Wizualizacje</a>
           </li>
           <li class="w-full px-6 py-2 hover:bg-gray-100">
-            <a href="#">Sklepy internetowe</a>
-          </li>
-          <li class="w-full px-6 py-2 hover:bg-gray-100">
-            <a href="#">Blogi</a>
+            <a href="#offer">Realizacje</a>
           </li>
           <li class="w-full px-4 py-2 hover:bg-gray-100">
-            <a href="#">O firmie</a>
+            <a href="#about">O firmie</a>
           </li>
           <li class="w-full px-4 py-2 hover:bg-gray-100">
-            <a href="#">Realizacje</a>
+            <a href="#projects">Realizacje</a>
           </li>
           <li class="w-full px-4 py-2 hover:bg-gray-100">
-            <a href="#">Kontakt</a>
+            <a href="#contact">Kontakt</a>
           </li>
         </ul>
       </button>
     </nav>
 
-    <main class="isolate flex h-[calc(100vh-72px)] w-full items-center">
+    <main class="isolate flex h-[calc(100vh-72px)] w-full items-center" id="about">
       <section class="relative flex h-full w-full flex-col justify-center bg-[#DCC1AB] px-4 py-16 lg:w-1/2 lg:px-20">
         <h1 class="animate__animated animate__fadeInLeft mb-12 text-5xl font-medium lg:text-6xl">
           Nowoczesna aranżacja Twojego ogrodu
@@ -116,10 +111,10 @@
           podejściem do każdego projektu.
         </p>
         <ul class="animate__animated animate__fadeInLeft flex flex-wrap gap-2">
-          <a href="#"
+          <a href="#contact"
             class="rounded-full bg-[#1B5B31] px-6 py-3 text-white hover:ring-2 hover:ring-[#1B5B31]/50 hover:transition-all hover:ease-in-out focus:ring-4 focus:ring-[#1B5B31]/50 focus:transition-all focus:ease-in-out">
             Skontaktuj się z nami</a>
-          <a href="#"
+          <a href="#projects"
             class="flex items-center gap-2 rounded-full border border-[#1B5B31] px-6 py-3 text-[#1B5B31] hover:ring-2 hover:ring-[#1B5B31]/50 hover:transition-all hover:ease-in-out focus:ring-4 focus:ring-[#1B5B31]/50 focus:transition-all focus:ease-in-out">
             Zobacz nasze realizacje
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
@@ -163,7 +158,7 @@
       <img src="https://picsum.photos/600/600?random=2" class="w-4/5" />
     </section>
 
-    <section class="flex h-auto w-full flex-col justify-center gap-12 bg-[#F5F0EC] px-4 py-16">
+    <section class="flex h-auto w-full flex-col justify-center gap-12 bg-[#F5F0EC] px-4 py-16" id="offer">
       <div class="lg:px-36">
         <small class="mb-4 block text-base text-[#1B5B31]" id="reveal">Oferta</small>
         <h2 class="mb-8 text-4xl font-medium lg:text-5xl" id="reveal">
@@ -244,7 +239,7 @@
       </div>
     </section>
 
-    <section class="flex h-auto w-full bg-[#1B5B31] lg:h-screen">
+    <section class="flex h-auto w-full bg-[#1B5B31] lg:h-screen" id="about">
       <img src="https://picsum.photos/600/600?random=0" class="hidden h-full w-1/2 lg:block" id="photo-3" />
       <div class="relative flex h-full w-full flex-col justify-center px-4 py-16 lg:px-20">
         <small class="mb-4 block text-base text-white" id="reveal">O firmie</small>
@@ -271,7 +266,7 @@
       </div>
     </section>
 
-    <section class="relative isolate flex w-full flex-col justify-center gap-12 bg-[#DCC1AB] px-4 py-16" id="masonry">
+    <section class="relative isolate flex w-full flex-col justify-center gap-12 bg-[#DCC1AB] px-4 py-16" id="projects">
       <div id="overlay"
         class="absolute bottom-0 left-0 z-[1] flex h-[32rem] w-full items-end justify-center bg-gradient-to-b from-transparent to-[#DCC1AB]">
         <button id="show-more"
@@ -338,7 +333,7 @@
       </div>
     </section>
 
-    <section class="flex w-full items-center justify-center bg-[#F5F0EC] p-4 lg:px-40 lg:py-16">
+    <section class="flex w-full items-center justify-center bg-[#F5F0EC] p-4 lg:px-40 lg:py-16" id="contact">
       <div
         class="flex w-full flex-wrap items-center justify-between gap-1 bg-[#1B5B31] p-8 text-white lg:px-16 lg:py-32">
         <h4 class="mb-8 text-2xl lg:mb-0 lg:text-3xl" id="reveal">
@@ -354,7 +349,7 @@
       </div>
     </section>
 
-    <footer class="bg-gray-950 px-4 py-16 text-white lg:px-40">
+    <footer class="bg-gray-950 px-4 py-16 text-white lg:px-40" id="footer">
       <div class="flex items-center justify-between">
         <span class="text-2xl"><span class="font-black">giard</span>design</span>
         <a href="#"
