feat: smooth scroll

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
       </button>
     </nav>
 
-    <main class="isolate flex h-[calc(100vh-72px)] w-full items-center" id="about">
+    <main class="isolate flex h-[calc(100vh-72px)] w-full items-center scroll-m-16" id="about">
       <section class="relative flex h-full w-full flex-col justify-center bg-[#DCC1AB] px-4 py-16 lg:w-1/2 lg:px-20">
         <h1 class="animate__animated animate__fadeInLeft mb-12 text-5xl font-medium lg:text-6xl">
           Nowoczesna aranżacja Twojego ogrodu
@@ -158,7 +158,7 @@
       <img src="https://picsum.photos/600/600?random=2" class="w-4/5" />
     </section>
 
-    <section class="flex h-auto w-full flex-col justify-center gap-12 bg-[#F5F0EC] px-4 py-16" id="offer">
+    <section class="flex h-auto w-full flex-col justify-center gap-12 bg-[#F5F0EC] px-4 py-16 scroll-m-16" id="offer">
       <div class="lg:px-36">
         <small class="mb-4 block text-base text-[#1B5B31]" id="reveal">Oferta</small>
         <h2 class="mb-8 text-4xl font-medium lg:text-5xl" id="reveal">
@@ -239,7 +239,7 @@
       </div>
     </section>
 
-    <section class="flex h-auto w-full bg-[#1B5B31] lg:h-screen" id="about">
+    <section class="flex h-auto w-full bg-[#1B5B31] lg:h-screen scroll-m-16" id="about">
       <img src="https://picsum.photos/600/600?random=0" class="hidden h-full w-1/2 lg:block" id="photo-3" />
       <div class="relative flex h-full w-full flex-col justify-center px-4 py-16 lg:px-20">
         <small class="mb-4 block text-base text-white" id="reveal">O firmie</small>
@@ -266,7 +266,8 @@
       </div>
     </section>
 
-    <section class="relative isolate flex w-full flex-col justify-center gap-12 bg-[#DCC1AB] px-4 py-16" id="projects">
+    <section class="relative isolate flex w-full flex-col justify-center gap-12 bg-[#DCC1AB] px-4 py-16 scroll-m-16"
+      id="projects">
       <div id="overlay"
         class="absolute bottom-0 left-0 z-[1] flex h-[32rem] w-full items-end justify-center bg-gradient-to-b from-transparent to-[#DCC1AB]">
         <button id="show-more"
@@ -333,7 +334,8 @@
       </div>
     </section>
 
-    <section class="flex w-full items-center justify-center bg-[#F5F0EC] p-4 lg:px-40 lg:py-16" id="contact">
+    <section class="flex w-full items-center justify-center bg-[#F5F0EC] p-4 lg:px-40 lg:py-16 scroll-m-16"
+      id="contact">
       <div
         class="flex w-full flex-wrap items-center justify-between gap-1 bg-[#1B5B31] p-8 text-white lg:px-16 lg:py-32">
         <h4 class="mb-8 text-2xl lg:mb-0 lg:text-3xl" id="reveal">
@@ -349,7 +351,7 @@
       </div>
     </section>
 
-    <footer class="bg-gray-950 px-4 py-16 text-white lg:px-40" id="footer">
+    <footer class="bg-gray-950 px-4 py-16 text-white lg:px-40 scroll-m-16" id="footer">
       <div class="flex items-center justify-between">
         <span class="text-2xl"><span class="font-black">giard</span>design</span>
         <a href="#"
