feat: nav cleanup

--- a/index.html
+++ b/index.html
@@ -20,15 +20,13 @@
       <ul class="mr-12 hidden items-center gap-12 lg:flex">
         <li class="group relative flex gap-1">
           <button
-            class="group group flex items-center gap-1 text-gray-900 after:absolute after:-bottom-6 after:left-0 after:h-[0.125rem] after:w-0 after:bg-black after:transition-all after:duration-1000 hover:after:w-full">
-            <span id="offer-dropdown-button">Oferta</span>
-            <svg id="offer-dropdown-button"
-              class="h-4 w-4 transition-transform duration-1000 ease-in-out group-focus:rotate-180 group-focus:transition-transform group-focus:duration-1000 group-focus:ease-in-out"
-              xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-              stroke="currentColor" class="h-6 w-6">
+            class="group flex items-center gap-1 text-gray-900 after:absolute after:-bottom-6 after:left-0 after:h-[0.125rem] after:w-0 after:bg-black after:transition-all after:duration-1000 hover:after:w-full">
+            <span>Oferta</span>
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+              stroke="currentColor"
+              class="h-4 w-4 transition-transform duration-1000 ease-in-out group-focus:rotate-180 group-focus:transition-transform group-focus:duration-1000 group-focus:ease-in-out">
               <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 8.25l-7.5 7.5-7.5-7.5" />
             </svg>
-
             <ul
               class="animate__animated animate__fadeIn absolute top-16 hidden w-auto whitespace-nowrap rounded-md border border-gray-200 bg-white py-2 text-left shadow-sm group-focus:z-[10] group-focus:grid">
               <li class="w-full px-4 py-2 hover:bg-gray-100">
@@ -67,12 +65,10 @@
         </svg>
       </div>
       <button class="group flex items-center lg:hidden">
-        <svg id="offer-dropdown-button"
-          class="h-6 w-6 transition-transform duration-1000 ease-in-out group-focus:rotate-180 group-focus:transition-transform group-focus:duration-1000 group-focus:ease-in-out"
-          xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
+          class="h-6 w-6 transition-transform duration-1000 ease-in-out group-focus:rotate-180 group-focus:transition-transform group-focus:duration-1000 group-focus:ease-in-out">
           <path stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 12h16M4 18h16" />
         </svg>
-
         <ul
           class="animate__animated animate__fadeIn absolute right-4 top-16 hidden w-auto whitespace-nowrap rounded-md border border-gray-200 bg-white py-2 text-left shadow-sm group-focus:z-[10] group-focus:grid">
           <li class="w-full px-4 py-2 hover:bg-gray-100">
@@ -100,7 +96,7 @@
       </button>
     </nav>
 
-    <main class="isolate flex h-[calc(100vh-72px)] w-full items-center scroll-m-16" id="about">
+    <main class="isolate flex h-[calc(100vh-72px)] w-full scroll-m-16 items-center" id="about">
       <section class="relative flex h-full w-full flex-col justify-center bg-[#DCC1AB] px-4 py-16 lg:w-1/2 lg:px-20">
         <h1 class="animate__animated animate__fadeInLeft mb-12 text-5xl font-medium lg:text-6xl">
           Nowoczesna aranżacja Twojego ogrodu
@@ -158,7 +154,7 @@
       <img src="https://picsum.photos/600/600?random=2" class="w-4/5" />
     </section>
 
-    <section class="flex h-auto w-full flex-col justify-center gap-12 bg-[#F5F0EC] px-4 py-16 scroll-m-16" id="offer">
+    <section class="flex h-auto w-full scroll-m-16 flex-col justify-center gap-12 bg-[#F5F0EC] px-4 py-16" id="offer">
       <div class="lg:px-36">
         <small class="mb-4 block text-base text-[#1B5B31]" id="reveal">Oferta</small>
         <h2 class="mb-8 text-4xl font-medium lg:text-5xl" id="reveal">
@@ -239,7 +235,7 @@
       </div>
     </section>
 
-    <section class="flex h-auto w-full bg-[#1B5B31] lg:h-screen scroll-m-16" id="about">
+    <section class="flex h-auto w-full scroll-m-16 bg-[#1B5B31] lg:h-screen" id="about">
       <img src="https://picsum.photos/600/600?random=0" class="hidden h-full w-1/2 lg:block" id="photo-3" />
       <div class="relative flex h-full w-full flex-col justify-center px-4 py-16 lg:px-20">
         <small class="mb-4 block text-base text-white" id="reveal">O firmie</small>
@@ -266,7 +262,7 @@
       </div>
     </section>
 
-    <section class="relative isolate flex w-full flex-col justify-center gap-12 bg-[#DCC1AB] px-4 py-16 scroll-m-16"
+    <section class="relative isolate flex w-full scroll-m-16 flex-col justify-center gap-12 bg-[#DCC1AB] px-4 py-16"
       id="projects">
       <div id="overlay"
         class="absolute bottom-0 left-0 z-[1] flex h-[32rem] w-full items-end justify-center bg-gradient-to-b from-transparent to-[#DCC1AB]">
@@ -334,7 +330,7 @@
       </div>
     </section>
 
-    <section class="flex w-full items-center justify-center bg-[#F5F0EC] p-4 lg:px-40 lg:py-16 scroll-m-16"
+    <section class="flex w-full scroll-m-16 items-center justify-center bg-[#F5F0EC] p-4 lg:px-40 lg:py-16"
       id="contact">
       <div
         class="flex w-full flex-wrap items-center justify-between gap-1 bg-[#1B5B31] p-8 text-white lg:px-16 lg:py-32">
@@ -351,7 +347,7 @@
       </div>
     </section>
 
-    <footer class="bg-gray-950 px-4 py-16 text-white lg:px-40 scroll-m-16" id="footer">
+    <footer class="scroll-m-16 bg-gray-950 px-4 py-16 text-white lg:px-40" id="footer">
       <div class="flex items-center justify-between">
         <span class="text-2xl"><span class="font-black">giard</span>design</span>
         <a href="#"
