feat: small touches

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
         </div>
         <div
           class="grid cursor-pointer rounded-xl bg-white p-8 transition-all duration-1000 ease-in-out hover:scale-105 hover:shadow-lg">
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="mb-8 w-12 h-12">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="mb-8 h-12 w-12">
             <path d="M12 15a3 3 0 100-6 3 3 0 000 6z" />
             <path fill-rule="evenodd"
               d="M1.323 11.447C2.811 6.976 7.028 3.75 12.001 3.75c4.97 0 9.185 3.223 10.675 7.69.12.362.12.752 0 1.113-1.487 4.471-5.705 7.697-10.677 7.697-4.97 0-9.186-3.223-10.675-7.69a1.762 1.762 0 010-1.113zM17.25 12a5.25 5.25 0 11-10.5 0 5.25 5.25 0 0110.5 0z"
@@ -230,7 +230,7 @@
         </div>
         <div
           class="grid cursor-pointer rounded-xl bg-white p-8 transition-all duration-1000 ease-in-out hover:scale-105 hover:shadow-lg">
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="mb-8 w-12 h-12">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="mb-8 h-12 w-12">
             <path fill-rule="evenodd"
               d="M9 4.5a.75.75 0 01.721.544l.813 2.846a3.75 3.75 0 002.576 2.576l2.846.813a.75.75 0 010 1.442l-2.846.813a3.75 3.75 0 00-2.576 2.576l-.813 2.846a.75.75 0 01-1.442 0l-.813-2.846a3.75 3.75 0 00-2.576-2.576l-2.846-.813a.75.75 0 010-1.442l2.846-.813A3.75 3.75 0 007.466 7.89l.813-2.846A.75.75 0 019 4.5zM18 1.5a.75.75 0 01.728.568l.258 1.036c.236.94.97 1.674 1.91 1.91l1.036.258a.75.75 0 010 1.456l-1.036.258c-.94.236-1.674.97-1.91 1.91l-.258 1.036a.75.75 0 01-1.456 0l-.258-1.036a2.625 2.625 0 00-1.91-1.91l-1.036-.258a.75.75 0 010-1.456l1.036-.258a2.625 2.625 0 001.91-1.91l.258-1.036A.75.75 0 0118 1.5zM16.5 15a.75.75 0 01.712.513l.394 1.183c.15.447.5.799.948.948l1.183.395a.75.75 0 010 1.422l-1.183.395c-.447.15-.799.5-.948.948l-.395 1.183a.75.75 0 01-1.422 0l-.395-1.183a1.5 1.5 0 00-.948-.948l-1.183-.395a.75.75 0 010-1.422l1.183-.395c.447-.15.799-.5.948-.948l.395-1.183A.75.75 0 0116.5 15z"
               clip-rule="evenodd" />
@@ -268,7 +268,7 @@
           współczesnego trybu życia.
         </p>
         <a href="#about"
-          class="inline-flex items-center gap-2 self-start rounded-full border border-white px-6 py-3 text-white transition-all duration-1000 ease-in-out hover:ring-2 hover:ring-white/50 hover:transition-all hover:duration-1000 hover:ease-in-out focus:ring-4 focus:ring-white/50 focus:transition-all focus:duration-1000 focus:ease-in-out"
+          class="inline-flex w-fit items-center gap-2 rounded-full border border-white px-6 py-3 text-white transition-all duration-1000 ease-in-out hover:ring-2 hover:ring-white/50 hover:transition-all hover:duration-1000 hover:ease-in-out focus:ring-4 focus:ring-white/50 focus:transition-all focus:duration-1000 focus:ease-in-out"
           id="reveal">
           Poznaj nas bliżej
           <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
@@ -358,30 +358,30 @@
         <div>
           <p class="mb-2" id="reveal">Śledź nasze najnowsze realizacje!</p>
           <a href="#" id="reveal"
-            class="flex items-center justify-center rounded-full bg-[#F5F0EC] px-6 py-3 text-[#1B5B31] transition-all duration-1000 ease-in-out hover:ring-2 hover:ring-[#F5F0EC]/50 hover:transition-all hover:duration-1000 hover:ease-in-out focus:ring-4 focus:ring-[#F5F0EC]/50 focus:transition-all focus:duration-1000 focus:ease-in-out">
+            class="flex w-fit items-center justify-center rounded-full bg-[#F5F0EC] px-6 py-3 text-[#1B5B31] transition-all duration-1000 ease-in-out hover:ring-2 hover:ring-[#F5F0EC]/50 hover:transition-all hover:duration-1000 hover:ease-in-out focus:ring-4 focus:ring-[#F5F0EC]/50 focus:transition-all focus:duration-1000 focus:ease-in-out">
             Instagram</a>
         </div>
       </div>
     </section>
 
     <footer class="scroll-m-16 bg-gray-950 px-4 py-16 text-white lg:px-40" id="footer">
-      <div class="grid grid-flow-row lg:grid-flow-col items-center justify-between">
+      <div class="grid grid-flow-row items-center justify-between lg:grid-flow-col">
         <a href="#about" class="text-2xl"><span class="font-black">giard</span>design</a>
-        <div class="grid items-center grid-flow-row lg:grid-flow-col gap-4">
+        <div class="grid grid-flow-row items-center gap-4 lg:grid-flow-col">
           <span>Daj znać, co możemy dla Ciebie zrobić!</span>
           <a href="#"
-            class="w-fit rounded-full bg-green-700 text-white px-6 py-3 hover:bg-green-800 focus:bg-green-900 transition-all duration-1000 ease-in-out hover:ring-2 hover:ring-green-700/50 hover:transition-all hover:duration-1000 hover:ease-in-out focus:ring-4 focus:ring-green-700/50 focus:transition-all focus:duration-1000 focus:ease-in-out">
+            class="w-fit rounded-full bg-green-700 px-6 py-3 text-white transition-all duration-1000 ease-in-out hover:bg-green-800 hover:ring-2 hover:ring-green-700/50 hover:transition-all hover:duration-1000 hover:ease-in-out focus:bg-green-900 focus:ring-4 focus:ring-green-700/50 focus:transition-all focus:duration-1000 focus:ease-in-out">
             Skontaktuj się z nami
           </a>
         </div>
       </div>
       <hr class="my-8 bg-white" />
-      <div class="flex flex-wrap justify-between mb-8">
-        <ul class="flex gap-16 mb-1 lg:mb-0">
+      <div class="mb-8 flex flex-wrap justify-between">
+        <ul class="mb-1 flex gap-16 lg:mb-0">
           <a href="#">Kontakt</a>
           <a href="#">Facebook</a>
           <a href="#">Instagram</a>
-          <a href="#">Linkedin</a>
+          <a href="#">LinkedIn</a>
         </ul>
         <ul class="flex gap-16">
           <li class="text-right">000-000-000</li>
@@ -493,13 +493,15 @@
               <path stroke-linecap="round" stroke-linejoin="round" d="M8.25 4.5l7.5 7.5-7.5 7.5" />
             </svg>
           </button>
-          <button class="group absolute right-0 top-0 bg-[#F5F0EC] p-4" id="photos-close">
-            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-              stroke="currentColor"
-              class="h-6 w-6 transition-transform ease-in-out group-hover:scale-125 group-hover:transition-transform group-hover:ease-in-out">
-              <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
-            </svg>
-          </button>
+          <form method="dialog">
+            <button class="group absolute right-0 top-0 bg-[#F5F0EC] p-4">
+              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                stroke="currentColor"
+                class="h-6 w-6 transition-transform ease-in-out group-hover:scale-125 group-hover:transition-transform group-hover:ease-in-out">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
+              </svg>
+            </button>
+          </form>
         </div>
       </div>
     </dialog>
